force-app/main/default/objects/HU__c/HU__c.object-meta.xml
<CustomObject>
    <label>HU</label>
    <pluralLabel>HUs</pluralLabel>
    <nameField>
        <label>HU Name</label>
        <type>AutoNumber</type>
        <displayFormat>HU-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores HU (Historia de Usuario / release unit) records with their deployment package, tests, status and validation checks.</description>
</CustomObject>