force-app/main/default/objects/HU__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Rama</label>
    <description>Git branch associated with this HU.</description>
    <inlineHelpText>Rama de Git relacionada con esta HU.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>