force-app/main/default/objects/HU__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <label>Branch Name</label>
    <description>Name of the git branch associated with this HU.</description>
    <inlineHelpText>Name of the git branch related to this HU.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>