force-app/main/default/objects/HU__c/fields/DEVOPS__c.field-meta.xml
<CustomField>
    <fullName>DEVOPS__c</fullName>
    <label>DEVOPS</label>
    <type>Text</type>
    <length>255</length>
</CustomField>