force-app/main/default/objects/HU__c/fields/External_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Reference__c</fullName>
    <label>External Reference</label>
    <description>External reference/ticket number (e.g. Jira, ServiceNow).</description>
    <inlineHelpText>Reference number in an external system.</inlineHelpText>
    <type>Text</type>
    <length>100</length>
</CustomField>