force-app/main/default/objects/HU__c/fields/Guide_Sent__c.field-meta.xml
<CustomField>
    <fullName>Guide_Sent__c</fullName>
    <label>Guia enviada</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>