force-app/main/default/objects/HU__c/fields/Has_AFA_Approval__c.field-meta.xml
<CustomField>
    <fullName>Has_AFA_Approval__c</fullName>
    <label>Has AFA Approval</label>
    <description>Indicates the HU has AFA sign-off.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>