force-app/main/default/objects/HU__c/fields/Has_Data__c.field-meta.xml
<CustomField>
    <fullName>Has_Data__c</fullName>
    <label>Has Data</label>
    <description>Indicates the HU carries data.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>