force-app/main/default/objects/HU__c/fields/Has_Permission_Groups__c.field-meta.xml
<CustomField>
    <fullName>Has_Permission_Groups__c</fullName>
    <label>Has Permission Groups</label>
    <description>Indicates the HU carries permission groups.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>