force-app/main/default/objects/HU__c/fields/Has_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Has_Permissions__c</fullName>
    <label>Has Permissions</label>
    <description>Indicates the HU carries permissions.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>