force-app/main/default/objects/HU__c/fields/Has_Test_Plans__c.field-meta.xml
<CustomField>
    <fullName>Has_Test_Plans__c</fullName>
    <label>Has Test Plans</label>
    <description>Indicates the HU has test plans.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>