force-app/main/default/objects/HU__c/fields/HU_Number__c.field-meta.xml
<CustomField>
    <fullName>HU_Number__c</fullName>
    <label>HU Number</label>
    <description>Business identifier of the HU (e.g. HU-1234).</description>
    <inlineHelpText>Enter the HU number used to identify this record (required).</inlineHelpText>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>