force-app/main/default/objects/HU__c/fields/HU_Status__c.field-meta.xml
<CustomField>
    <fullName>HU_Status__c</fullName>
    <label>HU Status</label>
    <description>Current status of the HU.</description>
    <inlineHelpText>Current status of the HU lifecycle.</inlineHelpText>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>En analisis</fullName>
                <label>En análisis</label>
            </value>
            <value>
                <fullName>En desarrollo</fullName>
            </value>
            <value>
                <fullName>En pruebas</fullName>
            </value>
            <value>
                <fullName>En pruebas PO</fullName>
            </value>
            <value>
                <fullName>En paso a produccion</fullName>
            </value>
            <value>
                <fullName>Revision de error</fullName>
            </value>
            <value>
                <fullName>Bloqueado</fullName>
            </value>
            <value>
                <fullName>Cerrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>