force-app/main/default/objects/HU__c/fields/Is_Multiple_Production__c.field-meta.xml
<CustomField>
    <fullName>Is_Multiple_Production__c</fullName>
    <label>Es paso a prod multiple</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>