force-app/main/default/objects/HU__c/fields/Multiple_Production_HU_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Production_HU_Numbers__c</fullName>
    <label>HUs del paso multiple</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>