force-app/main/default/objects/HU__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Nombre</label>
    <type>Text</type>
    <length>255</length>
</CustomField>