force-app/main/default/objects/HU__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <description>Free text notes/observations for this HU.</description>
    <inlineHelpText>Additional notes or observations.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>