force-app/main/default/objects/HU__c/fields/Package_Path__c.field-meta.xml
<CustomField>
    <fullName>Package_Path__c</fullName>
    <label>Package Path</label>
    <description>XML package path associated with this HU.</description>
    <inlineHelpText>Path of the XML package related to this HU.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>