force-app/main/default/objects/HU__c/fields/Permission_Requests__c.field-meta.xml
<CustomField>
    <fullName>Permission_Requests__c</fullName>
    <label>Permission Requests</label>
    <description>Number of permission requests associated with this HU. Cannot be negative.</description>
    <inlineHelpText>Number of permission requests for this HU (must be zero or greater).</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>