force-app/main/default/objects/HU__c/fields/Pipeline_Number__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Number__c</fullName>
    <label>Nro de pipeline</label>
    <type>Text</type>
    <length>255</length>
</CustomField>