force-app/main/default/objects/HU__c/fields/RFC__c.field-meta.xml
<CustomField>
    <fullName>RFC__c</fullName>
    <label>RFC</label>
    <type>Text</type>
    <length>255</length>
</CustomField>