force-app/main/default/objects/HU__c/fields/Rollback_Branch__c.field-meta.xml
<CustomField>
    <fullName>Rollback_Branch__c</fullName>
    <label>Rama Rollback</label>
    <type>Text</type>
    <length>255</length>
</CustomField>