force-app/main/default/objects/HU__c/fields/Solo_DevOps__c.field-meta.xml
<CustomField>
    <fullName>Solo_DevOps__c</fullName>
    <label>Solo devops</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>