force-app/main/default/objects/HU__c/fields/Test_Text__c.field-meta.xml
<CustomField>
    <fullName>Test_Text__c</fullName>
    <label>Tests</label>
    <description>Test names related to this HU, separated by spaces.</description>
    <inlineHelpText>List of tests separated by spaces.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>