force-app/main/default/objects/HU__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <label>All HUs</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>HU_Number__c</columns>
    <columns>HU_Status__c</columns>
    <columns>Branch_Name__c</columns>
    <columns>Permission_Requests__c</columns>
    <columns>Package_Path__c</columns>
    <columns>LAST_UPDATE</columns>
</ListView>